# toy-vms

./: README.md
py-toy-vms/: pyproject.toml
py-toy-vms/notebooks/: diff_01.ipynb
py-toy-vms/py_toy_vms/: __init__.py
py-toy-vms/py_toy_vms/logic/: __init__.py
py-toy-vms/py_toy_vms/logic/vm/: __init__.py  vm.py
py-toy-vms/py_toy_vms/logic/vm/mini_vn_isa/: mini_vn_isa.py
py-toy-vms/py_toy_vms/logic/vm/mini_vn_isa/np_mini_vn_isa/: __init__.py  base.py  np_mini_vn_isa.py  np_mini_vn_isa__test.py
py-toy-vms/py_toy_vms/logic/vm/mini_vn_isa/np_mini_vn_isa/asm/: __init__.py  assemble.py  assemble__test.py
py-toy-vms/py_toy_vms/logic/vm/mini_vn_isa/np_mini_vn_isa/ops/: ADD.py  ADD__test.py  Bnzp.py  Cnzp.py  DIV.py  GOTO.py  JUMP.py  LDR.py  MUL.py  SET.py  STR.py  SUB.py  __init__.py
